=======
HISTORY
=======

1.1rc13 (Unreleased)
--------------------

- Reset font size for tables in content.css. This fixes
  http://dev.plone.org/plone/ticket/10536
  [davisagli]

- Apply block format changes even when multiple blocks are selected.
  Fixes http://dev.plone.org/plone/ticket/10145
  [davisagli]

- Look up scale sizes for image types using the field called 'image',
  not the primary field. (They are not necessarily the same.) Fixes
  http://dev.plone.org/plone/ticket/10227
  [davisagli]

- Fix issue when handling images with apostrophes in the title. Fixes
  http://dev.plone.org/plone/ticket/10500
  [davisagli]

- Don't live search in the image and link popups until the search text is at
  least 3 characters long. Fixes http://dev.plone.org/plone/ticket/10458.
  [davisagli]

- Get the portal_url and navigation_root_url in a more sane fashion.
  Fixes https://dev.plone.org/plone/ticket/10423.
  [davisagli]

- Make sure paragraphs without a CSS class show up as "Normal paragraph"
  in the styles menu. Fixes http://dev.plone.org/plone/ticket/10532.
  [davisagli]

- Avoid unneeded imports.
  [hannosch]

- Made toolbar background transparent and made padding symmetrical.
  [limi]

1.1rc12 (2010-06-03)
--------------------

- Remove tabindex deprecated html attribute
  [edegoute]

- Fixed some i18n bugs (#10339, #9637).
  [dmunicio]

- Added Spanish translations for plone.tinymce domain
  [dmunicio]

- Updated to upstream translations. Added Georgian (ka) language.
  [vincentfretin]

1.1rc11 (2010-05-01)
--------------------

- Fix regression in handling of resolveuid links that don't include an anchor.
  [davisagli]

- Include a copy of resolveuid.py so that links by UID can be resolved even
  when kupu is not installed and the transform is not applied (such as when
  inserting images in the first place).
  [davisagli]

- Prefer xml.etree over elementtree.
  [hannosch]

- Fixed test failure and avoid bare try/except statements related to portal